Atualizaçāo da descriçāo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="introducao-child"></div>
         <h1 class="caroline-oliveira">Caroline Oliveira</h1>
         <div class="u-x-u-i-designer-label"></div>
-        <h2 class="designer-de-ux">Designer de UX e UI</h2>
+        <h2 class="designer-de-ux">UX Designer</h2>
         <div class="frame"></div>
       </section>
       <section class="projetos-wrapper">
@@ -83,11 +83,10 @@
             <img class="footer-copyright-frame" src="./public/foto_caroline_oliveira.jpeg" alt="Foto de Caroline Oliveira">
             <div class="rectangle">
               <div class="caroline-uma">
-                Caroline é uma UI/UX designer focada em desenvolvimento de
-                interfaces e melhoria da experiência do usuário.
+                Caroline é uma UX Designer focada na melhoria da experiência do usuário.
               </div>
               <div class="possui-formao-em">
-                Possui formaçāo em andamento em UX Design pelo Google, além de habilidades em HTML e CSS. Sua formaçāo e experiências podem ser conferidas no botāo abaixo.
+                Possui formaçāo em UX Design pelo Google, além de habilidades em HTML e CSS. Sua formaçāo e experiências podem ser conferidas no botāo abaixo.
               </div>
               <a class="link-document" href="https://oliveira-caroline.github.io/portfolio-ux/public/curriculo_caroline_oliveira_ux_design.pdf"
                 target="_target">
