--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -86,7 +86,7 @@
                 Caroline é uma UX Designer focada na melhoria da experiência do usuário.
               </div>
               <div class="possui-formao-em">
-                Possui formaçāo em UX Design pelo Google, além de habilidades em HTML e CSS. Sua formaçāo e experiências podem ser conferidas no botāo abaixo.
+                Possui formaçāo em andamento em UX Design pelo Google, além de habilidades em HTML e CSS. Sua formaçāo e experiências podem ser conferidas no botāo abaixo.
               </div>
               <a class="link-document" href="https://oliveira-caroline.github.io/portfolio-ux/public/curriculo_caroline_oliveira_ux_design.pdf"
                 target="_target">
